src/styles/interactive-video.css
/* ... */
/* Use drop-shadow in case of transparent images */
.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-transparent-interaction.h5p-image-interaction:not(.goto-clickable-visualize):not(.h5p-box-shadow-disabled) .h5p-image img {
  filter: drop-shadow(0 0 0.325em rgba(0, 0, 0, 0.25));
}
.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-transparent-interaction.h5p-image-interaction:not(.goto-clickable-visualize) {
  box-shadow: none;
  overflow: visible;
}

.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-box-shadow-disabled {
  box-shadow: none;
}
.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-transparent-interaction.h5p-box-shadow-disabled .h5p-image img {
  filter: none;
}

.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-ivhotspot-interaction {
  box-shadow: none;
  background: none;
  overflow: visible;
}

.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-ivhotspot-interaction .h5p-interaction-outer,
.h5p-interactive-video .h5p-interaction.h5p-poster.h5p-transparent-interaction.h5p-image-interaction .h5p-interaction-outer {
  overflow: visible;
}

.h5p-interactive-video .h5p-interaction.h5p-poster .h5p-interaction-outer {
  position: relative;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow-y: auto;
}

.h5p-interactive-video .h5p-interaction-inner,
.h5p-interactive-video .h5p-interaction-inner.h5p-image {
  display: block;
  width: 100%;
  height: auto;
  font-size: 0.875em;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.h5p-interactive-video .h5p-interaction-inner.h5p-free-text-question-wrapper {
  height: inherit;
}

.h5p-interactive-video .h5p-interaction-inner.h5p-ivhotspot {
  height: 100%;
}

.h5p-interactive-video .h5p-interaction-inner.h5p-text {
  width: auto;
}
.h5p-interactive-video .h5p-text:focus,
.h5p-interactive-video .h5p-table:focus {
  outline: 0;
}

.h5p-interactive-video .h5p-interaction-inner.h5p-questionnaire-wrapper,
.h5p-interactive-video .h5p-interaction-inner.h5p-image {
  height: 100%;
}

.h5p-interactive-video .h5p-dialog .h5p-image img {
  margin: 0 auto;
  position: relative;
  top: 0;
}

.h5p-interactive-video .h5p-interaction-overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.h5p-interactive-video .h5p-controls {
  font-size: 16px;
  height: 36px;
  background: #282836;
  display: flex;
  line-height: 1.5em;
}
.h5p-interactive-video .h5p-control {
  display: inline-block;
  height: 36px;
  color: #fefefe;
  outline: 0;
  width: 36px;
  margin-right: 6px;
  text-decoration: none;
  cursor: pointer;
  transition: box-shadow 0.1s ease-out 0.3s;
}
.h5p-interactive-video .h5p-control:focus {
  outline: 2px solid #179fff;
  outline-offset: -4px;
}
.h5p-interactive-video .h5p-control:hover {
  text-decoration: none;
}
.h5p-interactive-video .h5p-control:focus {
  outline: 2px solid #179fff;
  outline-offset: -4px;
}
.h5p-interactive-video .h5p-controls-left .h5p-control:first-child {
  background-color: var(--h5p-theme-contrast-cta-white);
}

.h5p-interactive-video .h5p-controls-right .h5p-control:first-child {
  margin-right: 6px;
}

.h5p-interactive-video [aria-disabled="true"].h5p-control {
  cursor: default;
}

.h5p-interactive-video .h5p-control.h5p-time,
.h5p-interactive-video [aria-disabled="true"].h5p-control.h5p-slider .ui-slider-handle,
.h5p-interactive-video [aria-disabled="true"].h5p-control.h5p-slider {
  cursor: default;
}

.h5p-interactive-video .h5p-control:before {
  position: absolute;
 font-family: 'h5p-theme';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  font-size: 18px;
  text-transform: none;
  line-height: 37px;
  width: 36px;
  color: #fefdff;
  text-align: center;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.h5p-interactive-video .h5p-minimal-overlay .h5p-minimal-button {
  display: inline-block;
  padding-top: 4em;
  margin: 0 1em;
  position: relative;
  vertical-align: bottom;
  outline: none;
  cursor: pointer;
  -webkit-transition: visibility 0s linear 0.1s;
}
.h5p-interactive-video .h5p-minimal-overlay .h5p-minimal-button.h5p-hide {
  visibility: hidden;
  -webkit-transition-delay: 0s;
}
.h5p-interactive-video .h5p-minimal-overlay .h5p-minimal-button:before {
  font-size: 4em;
  line-height: 1em;
  position: absolute;
  font-family: 'H5PFontAwesome4';
  top: 0;
  left: 50%;
  transform: translateX(-50%);
}
.h5p-interactive-video .h5p-control[aria-expanded="true"]:before,
.h5p-interactive-video .h5p-control:active:before,
.h5p-interactive-video .h5p-minimal-overlay .h5p-minimal-button:active {
  color: #bababa
}
.h5p-interactive-video .h5p-control:hover:before,
.h5p-interactive-video .h5p-minimal-overlay .h5p-minimal-button:hover {
  color: #dbd7d1;
}
.h5p-interactive-video .h5p-minimal-overlay .h5p-minimal-button:focus {
  outline: 2px solid #179fff;
  outline-offset: 5px;
}
.h5p-interactive-video [aria-disabled="true"].h5p-control:before,
.h5p-interactive-video .h5p-minimal-overlay [aria-disabled="true"].h5p-minimal-button {
  color: #606060;
}
.h5p-interactive-video .h5p-minimal-overlay [aria-disabled="true"].h5p-minimal-button {
  color: #747474;
}
.h5p-interactive-video .h5p-play:before {
  content: "\e91e";
}
.h5p-interactive-video .h5p-pause:before {
  content: "\e91f";
}
.h5p-interactive-video .h5p-rewind10:before {
  content: "\e943"; /* fa-history */
}
.h5p-interactive-video .h5p-control.h5p-bookmarks {
  position: relative;
}
.h5p-interactive-video .h5p-control.h5p-bookmarks:before,
.h5p-interactive-video .h5p-minimal-overlay .h5p-bookmarks:before {
  content: "\e93d";
}
.h5p-interactive-video .h5p-control.h5p-endscreens:before,
.h5p-interactive-video .h5p-minimal-overlay .h5p-endscreens:before {
  font-family: H5Picons;
  content: "\e91c";
}
.h5p-interactive-video .h5p-control.h5p-quality:before,
.h5p-interactive-video .h5p-minimal-overlay .h5p-quality:before {
  content: "\e93f";
}
/* ... */

